--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
 <!--<link rel="stylesheet" media="screen and (max-width:480px)" href="nikam/mobile.css">-->
 <link rel="stylesheet" media="screen and (min-width:481px)" href="/cv.css">
 <link rel="stylesheet" media="print" href="/print.css">
+<title> Resume | Abhijeet Nikam </title>
 </head>
 
 <body>
